# NTUT-CGLab

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test.cpp
CGLAB_BACKUP/: midterm.cpp
